# Fleapo-Project-Manager

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 1739d9b2189a_describe_your_changes.py  29e27c5a26ce_initial_migration.py  68a1fa58c286_first_migrtion.py  750bce74bd94_describe_your_changes.py  9bf05777c8f7_initial_migration.py  9de838512e79_initial_migration.py
backend/src/: config.py  main.py  middleware.py
backend/src/auth/: routes.py  schemas.py  services.py
backend/src/auth/utils/: jwt.py
backend/src/db/: base.py
backend/src/task/: models.py  routes.py  schemas.py  services.py
backend/src/user/: models.py  routes.py  schemas.py  services.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: axios.ts  const.tsx
frontend/src/assets/: icon.ts  logo.ts
frontend/src/auth/: Routes.tsx
frontend/src/components/common/: ConfirmModal.tsx  CustomModal.tsx
frontend/src/components/common/task/: TaskAnalyticsCard.tsx  TaskCard.tsx  TaskForm.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/routes/: Dashboard.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Register.tsx  Settings.tsx  Tasks.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts  task.ts
