[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.7.0"
anyio = "4.7.0"
bcrypt = "4.2.1"
click = "8.1.8"
fastapi = "0.115.6"
h11 = "0.14.0"
idna = "3.10"
passlib = "1.7.4"
pydantic = "2.10.4"
pydantic-core = "2.27.2"
pyjwt = "2.10.1"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
starlette = "0.41.3"
typing-extensions = "4.12.2"
uvicorn = "0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
